prevented jumping endpoints on hover for slider

--- a/cp-styles/app/styles/base/_block.scss
+++ b/cp-styles/app/styles/base/_block.scss
@@ -174,7 +174,7 @@ ul, ol  {
 		&:hover {
 			& + output {
 				box-shadow: none;
-				top: 15px;
+				--y-offset: 0px;
 			}
 		}
 
